[fix] desktop app bar logo alignment

--- a/src/app/components/app-bar/app-bar.component.scss
+++ b/src/app/components/app-bar/app-bar.component.scss
@@ -1,5 +1,9 @@
 :host {
   z-index: 3;
+  img:not([slot='left']) {
+    padding: 0 12px;
+    margin-right: 8px;
+  }
   kor-avatar {
     cursor: pointer;
   }
